--- a/style.css
+++ b/style.css
@@ -14,11 +14,7 @@ body {
 	font-size: 4.236rem;
 	width: 95%;
 	text-align: center;
-	margin: 5px;
-}
-
-.ui.container {
-	align-items: center;
+	margin: 5px auto;
 }
 
 .ui.raised.segment {
@@ -27,37 +23,50 @@ body {
 	max-width: 95%;
 	height: auto;
 	max-height: 85%;
+	background-color: #333;
 }
 
-.columns {
-	display: flex;
-	margin: 10px 5px;
+footer {
+	margin: 20px auto;
+	width: 400px;
+	max-width: 95%;
+	height: auto;
+	color: #333;
+	font-size: 1.618rem;
 }
 
-.leftColumn {
-	width: 50%;
+.buttons {
 	display: flex;
+	margin: 5px auto;
+	width: 100%;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: center;
 }
 
-.leftColumn > * {
-	flex: 1 1 40%;
+.buttons > * {
+	flex: 1 1 calc(25% - 15px);
 }
 
 .ui.button {
 	margin: 5px;
-}
-.rightColumn {
-	width: 50%;
-	display: flex;
-	flex-flow: column wrap;
+	height: 60px;
+	padding: 10px;
+	font-size: 2.618rem;
 }
 
-.rightColumn > * {
-	flex: 1 1 17%;
+/*tell it to stfu*/
+.ui.button:not(.icon)>.icon:not(.button):not(.dropdown) {
+	margin: 0 auto;
 }
 
+.ui.button i.arrow.left.icon {
+	opacity: 1;
+	margin: 0 auto;
+}
+
+#equals {
+	flex-grow: 20;
+}
 
 /*
 * { background-color: rgba(255,0,0,0.3);}
