--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ body {
 
 footer {
 	margin: 20px auto;
+	line-height: 30px;
 	width: 400px;
 	max-width: 95%;
 	height: auto;
 	color: #333;
-	font-size: 1.618rem;
+	font-size: 2.618rem;
 }
 
 .buttons {
@@ -65,7 +66,7 @@ footer {
 }
 
 #equals {
-	flex-grow: 20;
+	flex-grow: 16;
 }
 
 /*
